# GAMES101

./: .gitignore  AreaLight.hpp  BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Light.hpp  Material.hpp  OBJ_Loader.h  OBJ_Loader.hpp  Object.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shader.hpp  Sphere.hpp  Texture.hpp  Triangle.cpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
